--- a/popup/index.html
+++ b/popup/index.html
@@ -4,9 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="popup.js"></script>
+  <script src="jquery-3.6.0.min.js"></script>
+  <title>BulkImageDownloader</title>
 </head>
 <body>
-  
+  <button>Download All</button>
 </body>
 </html>
