--- a/popup/index.html
+++ b/popup/index.html
@@ -1,15 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <script src="popup.js"></script>
-  <script src="jquery-3.6.0.min.js"></script>
-  <title>BulkImageDownloader</title>
-</head>
-<body>
-  <button>Download All</button>
-</body>
+<html>
+    <head>
+        <link rel="stylesheet" href="style.css" />
+        <script src="../jquery-3.6.0.min.js"></script>
+        <script src="popup.js"></script>
+    </head>
+    <body>
+        <div class="container">
+            <button id="download_all" class="btn">Download All</button>
+
+            <div class="gallery">
+              
+            </div>
+        </div>
+    </body>
 </html>
